Implement initial analytics
