# libs/common/src/api/mykomap-openapi.json
@@ -1018,6 +1018,10 @@
                               },
                               "displayText": {
                                 "type": "string"
+                              },
+                              "analyticOnClick": {
+                                "default": false,
+                                "type": "boolean"
                               }
                             },
                             "required": [
@@ -1059,6 +1063,10 @@
                               },
                               "displayText": {
                                 "type": "string"
+                              },
+                              "analyticOnClick": {
+                                "default": false,
+                                "type": "boolean"
                               }
                             },
                             "required": [
@@ -1100,6 +1108,10 @@
                               },
                               "displayText": {
                                 "type": "string"
+                              },
+                              "analyticOnClick": {
+                                "default": false,
+                                "type": "boolean"
                               }
                             },
                             "required": [
